# paper_search_service

./: LICENSE  README.md  manage.py  pyproject.toml
api/: constants.py  models.py  views.py
extra/: core.py
paper_search_service/: api.py  asgi.py  settings.py  urls.py  wsgi.py
